# loguru-themes

./: .gitattributes  .gitignore  LICENSE  README.md  llms.txt  main.py  pyproject.toml
.github/workflows/: deploy-docs.yml
docs/: README.md  astro.config.mjs  package-lock.json  package.json
docs/public/: llms.txt
docs/src/content/docs/: api-reference.md  color-scheme.md  customizing.md  examples.md  getting-started.md  icons.md  index.mdx  own-logger.md  themes.md
docs/src/content/docs/ru/: api-reference.md  color-scheme.md  customizing.md  examples.md  getting-started.md  icons.md  index.mdx  own-logger.md  themes.md
examples/: 01_quickstart.py  02_customize.py  03_color_scheme.py  README.md
loguru_themes/: __init__.py  apply.py  formats.py  icons.py  models.py  palette.py  registry.py  themes.py
openspec/changes/add-loguru-color-themes/: design.md  proposal.md  tasks.md
openspec/changes/add-loguru-color-themes/specs/ansi-color-scheme/: spec.md
openspec/changes/add-loguru-color-themes/specs/level-icons/: spec.md
openspec/changes/add-loguru-color-themes/specs/theme-system/: spec.md
tests/: test_loguru_themes.py
tools/: render_theme_svgs.py
